--- a/javafx-mvc/pom.xml
+++ b/javafx-mvc/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.javafx-mvc</groupId>
+    <groupId>com.javafxMvc</groupId>
     <artifactId>javafx-mvc</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -29,7 +29,7 @@
         </dependency>
 
         <dependency>
-            <groupId>com.jafafxMvc</groupId>
+            <groupId>com.javafxMvc</groupId>
             <artifactId>validator</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
