--- a/pom.xml
+++ b/pom.xml
@@ -5,38 +5,20 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.javafxMvc</groupId>
-    <artifactId>validator</artifactId>
+    <artifactId>javafx-mvc-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <packaging>pom</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>11</maven.compiler.release>
-        <javafx.version>13</javafx.version>
     </properties>
 
-    <dependencies>
-        <!-- javafx-->
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-fxml</artifactId>
-            <version>${javafx.version}</version>
-        </dependency>
-
-        <!-- reflections -->
-        <dependency>
-            <groupId>org.reflections</groupId>
-            <artifactId>reflections</artifactId>
-            <version>0.9.11</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.10</version>
-        </dependency>
-
-    </dependencies>
+    <modules>
+        <module>./javafx-mvc</module>
+        <module>./validator</module>
+    </modules>
 
     <build>
         <plugins>
