--- a/javafx-mvc/pom.xml
+++ b/javafx-mvc/pom.xml
@@ -15,6 +15,18 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.javafxMvc</groupId>
+            <artifactId>validator</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.util</groupId>
+            <artifactId>reflectionUtil</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- javafx-->
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -28,11 +40,7 @@
             <version>${javafx.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.javafxMvc</groupId>
-            <artifactId>validator</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+
 
         <!-- reflections -->
         <dependency>
@@ -46,10 +54,20 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.10</version>
         </dependency>
+
+        <!-- javafx -->
         <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
             <version>11.0.0</version>
+        </dependency>
+
+        <!-- testing -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
