--- a/validator/pom.xml
+++ b/validator/pom.xml
@@ -15,6 +15,12 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.util</groupId>
+            <artifactId>reflectionUtil</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- javafx-->
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -29,11 +35,18 @@
             <version>0.9.11</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <!-- StringUtils -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.10</version>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
