--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <modules>
         <module>./javafx-mvc</module>
         <module>./validator</module>
+        <module>l10n</module>
     </modules>
 
     <build>
