--- a/javafx-mvc/pom.xml
+++ b/javafx-mvc/pom.xml
@@ -22,6 +22,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.javafxMvc</groupId>
+            <artifactId>l10n</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.util</groupId>
             <artifactId>reflectionUtil</artifactId>
             <version>1.0-SNAPSHOT</version>
