--- a/javafx-mvc/pom.xml
+++ b/javafx-mvc/pom.xml
@@ -4,14 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.javafxMvc</groupId>
+    <parent>
+        <groupId>com.javafxMvc</groupId>
+        <artifactId>javafx-mvc-parent</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <artifactId>javafx-mvc</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>11</maven.compiler.release>
-        <javafx.version>13</javafx.version>
+        <javafx.version>15-ea+6</javafx.version>
     </properties>
 
     <dependencies>
@@ -24,12 +27,6 @@
         <dependency>
             <groupId>com.javafxMvc</groupId>
             <artifactId>l10n</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.util</groupId>
-            <artifactId>reflectionUtil</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
@@ -46,13 +43,10 @@
             <version>${javafx.version}</version>
         </dependency>
 
-
-
-        <!-- reflections -->
         <dependency>
-            <groupId>org.reflections</groupId>
-            <artifactId>reflections</artifactId>
-            <version>0.9.11</version>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.0.0</version>
         </dependency>
 
         <dependency>
@@ -60,33 +54,5 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.10</version>
         </dependency>
-
-        <!-- javafx -->
-        <dependency>
-            <groupId>org.controlsfx</groupId>
-            <artifactId>controlsfx</artifactId>
-            <version>11.0.0</version>
-        </dependency>
-
-        <!-- testing -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <release>${maven.compiler.release}</release>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
