--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
     <groupId>com.javafxMvc</groupId>
     <artifactId>javafx-mvc-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <packaging>pom</packaging>
 
     <properties>
@@ -20,6 +19,42 @@
         <module>./validator</module>
         <module>l10n</module>
     </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.util</groupId>
+            <artifactId>reflectionUtil</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <!-- reflections -->
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.11</version>
+        </dependency>
+
+        <!-- logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+
+        <!-- testing -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
