--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
             <version>0.9.11</version>
         </dependency>
 
+        <!-- needed for reflections -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>29.0-jre</version>
+        </dependency>
+
         <!-- logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
