--- a/javafx-mvc/pom.xml
+++ b/javafx-mvc/pom.xml
@@ -7,11 +7,11 @@
     <parent>
         <groupId>com.javafxMvc</groupId>
         <artifactId>javafx-mvc-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
 
     <artifactId>javafx-mvc</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <properties>
         <javafx.version>15-ea+6</javafx.version>
@@ -21,13 +21,13 @@
         <dependency>
             <groupId>com.javafxMvc</groupId>
             <artifactId>validator</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
 
         <dependency>
             <groupId>com.javafxMvc</groupId>
             <artifactId>l10n</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
 
         <!-- javafx-->
