--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.javafxMvc</groupId>
     <artifactId>javafx-mvc-parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -22,9 +22,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.util</groupId>
+            <groupId>com.com.schlussdorf.util</groupId>
             <artifactId>reflectionUtil</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
 
         <!-- reflections -->
