--- a/validator/pom.xml
+++ b/validator/pom.xml
@@ -7,11 +7,11 @@
     <parent>
         <groupId>com.javafxMvc</groupId>
         <artifactId>javafx-mvc-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
 
     <artifactId>validator</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <properties>
         <javafx.version>15-ea+6</javafx.version>
